--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <!-- end of navbar -->
             <div class=" container-fluid bgmar">
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-9 col-md-9 col-sm-12">
                         <div>
                             <h5 class="SIX-MONTHS-ONLINE ">
@@ -74,6 +74,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </header>
 
 
@@ -96,16 +97,35 @@
                         </button>
                     </div>
                     <div class="carousel-item active">
-                        <div class="col-sm">
-                            <div class="card me-3 mb-3" style="max-width: 18rem;">
-                                <img src="img/ai-support.svg" class="card-img-top card-imgs" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">24X7 AI based support system</h5>
-                                </div>
+                        <!-- <div class="col-sm"> -->
+                        <div class="card f me-3 mb-3" style="width: 200px; display: flex; flex-direction: column;">
+                            <img src="img/ai-support.svg" class="card-img-top card-imgs" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">24X7 AI based support system</h5>
+                            </div>
+                            <!-- </div> -->
+                        </div>
+                        <!-- <div class="col-sm"> -->
+                        <div class="card  f me-3 mb-3" style="width: 200px;">
+                            <img src="img/mentor.svg" class="card-img-top card-imgs" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">1:1 mentor support</h5>
+
+                                <!-- </div> -->
+                            </div>
+                        </div>
+                        <!-- <div class="col-sm"> -->
+                        <div class="card f me-3 mb-3" style="width: 200px;">
+                            <img src="img/mentor.svg" class="card-img-top card-imgs" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">1:1 mentor support</h5>
+
+                                <!-- </div> -->
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
+
                         <div class="col-sm">
                             <div class="card me-3 mb-3" style="max-width: 18rem;">
                                 <img src="img/mentor.svg" class="card-img-top card-imgs" alt="...">
@@ -172,36 +192,48 @@
     </section>
 
     <section class="tabs">
-        <div class="row text-center m-0">
-            <div class="col-sm-2">
-                <h4 class="details">Details</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4>Index</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4>Programming Environment</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4>Price</h4>
-            </div>
-            <div class="col-sm-2">
-                <h4>FAQ</h4>
-            </div>
+        <hr>
+        <div>
+            <div class="row justify-content-center m-0">
+                <div class="col-sm-2">
+                    <h4 class="details">Details</h4>
+                </div>
+                <div class="col-sm-2">
+                    <h4 class="remaintext">Index</h4>
+                </div>
+                <div class="col-sm-3">
+                    <h4 class="remaintext">Programming Environment</h4>
+                </div>
+                <div class="col-sm-2">
+                    <h4 class="remaintext">Price</h4>
+                </div>
+                <div class="col-sm-2">
+                    <h4 class="remaintext">FAQ</h4>
+                </div>
 
-
+            </div>
         </div>
+        <hr>
     </section>
 
     <section>
         <div>
-            <div class="text-center">
-                <button type="button" class="btn btn-primary rounded-pill">Overview of Course</button>
-                <button type="button" class="btn btn-secondary rounded-pill">Pre Requisites</button>
-                <button type="button" class="btn btn-success rounded-pill">Target Audience</button>
-                <button type="button" class="btn btn-danger rounded-pill">What You Will Learn</button>
+
+            <div class="row m-0 justify-content-center">
+                <div class="col-sm-3 rectblue rounded-pill" style="width: 172px; background-color:#3a5edd;">
+                    <h5 class="rectbluetext text-white">Overview of Course</h5>
+                </div>
+                <div class="col-sm-3 rectblue rounded-pill" style="width:133px ;">
+                    <h5 class="rectbluetext">Pre Requisites</h>
+                </div>
+                <div class="col-sm-3 rectblue rounded-pill" style="width: 149px;">
+                    <h5 class="rectbluetext">Target Audience</h5>
+                </div>
+                <div class="col-sm-3 rectblue rounded-pill" style="width:180px ;">
+                    <h5 class="rectbluetext">What You Will Learn</h5>
+                </div>
             </div>
-            <div class="row m-0">
+            <div class="row m-0 justify-content-center">
 
                 <div class="col-lg-4 col-md-4 col-sm-8">
                     <img src="img/course-overview.svg" class="overview" alt="">
@@ -227,15 +259,87 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="skills">
+            <h2 class="gain">Skills you will gain</h2>
+            <div class="row justify-content-center">
+                <div class="col-sm-2 skillbox rounded-pill">
+                    <h6 class="Tags">Software Defined Networking</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width:182px ;">
+                    <h6 class="Tags">Distributed Computing</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width: 91px;">
+                    <h6 class="Tags">Big Data</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width:148px ;">
+                    <h6 class="Tags">Cloud Computing</h6>
+                </div>
+            </div>
+            <div class="row justify-content-center" style="margin-bottom: 12px;">
+                <div class="col-sm-2 skillbox rounded-pill" style="width:61px ;">
+                    <h6 class="Tags">C++</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width:80px ;">
+                    <h6 class="Tags">NoSGL</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width: 164px;">
+                    <h6 class="Tags">Cloud Infrastructure</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width:156px ;">
+                    <h6 class="Tags">Cloud Applications</h6>
+                </div>
+                <div class="col-sm-2 skillbox rounded-pill" style="width:127px ;">
+                    <h6 class="Tags">Cloud Storage</h6>
+                </div>
+            </div>
 
+        </div>
+    </section>
+
+    <section style="margin-top: 100px;">
+        <h2 class="tools text-center">
+            Tools Covered
+        </h2>
+        <div class="row m-0 justify-content-center">
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/matplotli_2021-05-12/matplotli.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/n_2021-05-12/n.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/python_2021-05-12/python.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/keras_2021-05-12/keras.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/tensorflow_2021-05-12/tensorflow.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
     <section class="benefits">
         <div class="text-center">
             <h2 class="tools" style="padding:60px 0 40px 0"> Benefits</h2>
         </div>
-        <div class="row m-0">
-            <div class="col-lg-5">
+        <div class="row m-0 justify-content-center">
+            <div class="col-lg-5 col-md-5">
                 <h5 class="data">Data Science is an evolving field and Python has become a required skill for 46-percent
                     of jobs in Data Science. The
                     demand for Data Science professionals will grow an estimated 1581-percent by 2020 and professionals
@@ -244,7 +348,7 @@
                 <h4 class="des">Designation</h4>
             </div>
             <div class="col-lg-2"></div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4">
                 <img src="img/graph.svg" class="img-fluid" style="padding-bottom:60px;" alt="">
             </div>
         </div>
@@ -294,16 +398,24 @@
 
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12">
-                        <div class="card" style="width: 80%; margin-top: 30px;">
-                            <div class="card-body">
-                                <h3 class="card-title">Tony Hogan</h3>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of the card's
-                                    content.</p>
-                                <a href="#" class="card-link">Card link</a>
-                                <a href="#" class="card-link">Another link</a>
+                        <div class="card" style="width: 80%; height: auto; padding: 20px 30px;">
+                            <div class="card-body justify-content-center">
+                                <div class="row">
+                                    <div class="col-lg-11 col-md-7 col-sm-12">
+                                        <h3 class="card-title tony">Tony Hogan</h3>
+                                        <img src="img/5-stars.svg" style="width: 96px; height: 16px;" alt="">
+                                        <h5 class="cloud" style="margin-top: 25px;">AI Educator learning platform is the
+                                            best
+                                            place to learn with tutorial
+                                            videos, live
+                                            classes, and live projects by which
+                                            you can understand easily and have excellent customer service.
+                                        </h5>
+                                    </div>
+                                    <div class="col-lg-1 text-end">
+                                        <img src="img/quotation.svg" alt="">
+                                    </div>
+                                </div>
                             </div>
                         </div>
 
@@ -312,6 +424,41 @@
             </div>
         </div>
 
+    </section>
+
+    <section style="margin-top: 100px;">
+        <h2 class="tools text-center">
+            Partnered with AI Educator
+        </h2>
+        <div class="row m-0 justify-content-center">
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/adobe_2021-05-13 (1)/adobe.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/amazon_2021-05-13/amazon.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/flipkart_2021-05-13/flipkart.jpg " class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/microsoft_2021-05-13/microsoft.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+            <div class="col-lg-2 col-md-2">
+                <div class="card cards1">
+                    <img src="img/ola_2021-05-13/ola.jpg" class="card-img-top caimg" alt="...">
+                </div>
+            </div>
+        </div>
     </section>
 
 
